Fixed alignment issues and finished Project page

--- a/Projects.css
+++ b/Projects.css
@@ -22,7 +22,7 @@ body {
   top: 0;
 }
 
-ul {
+.navigation ul {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -35,7 +35,7 @@ ul {
   position: fixed;
 }
 
-li {
+.navigation li {
   padding-left: 5px;
   padding-right: 5px;
   padding-top: 0;
@@ -46,7 +46,7 @@ li {
   height: 60%;
 }
 
-li:hover {
+.navigation li:hover {
   background-color: rgba(69, 179, 209, 0.3);
   border-radius: 30%;
 }
@@ -76,4 +76,41 @@ img {
   border-bottom: 2px solid black;
   border-top: 2px solid black;
   margin-top: 5%;
+}
+
+.Projects {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 480px;
+  margin-bottom: 300px;
+}
+.Projects label {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: rgba(69, 179, 209, 0.8);
+  margin-bottom: 10%;
+  font-size: 50px;
+  margin-right: 100px;
+  width: 100%;
+  margin: 0;
+  padding-bottom: 10%;
+}
+
+.Projects li {
+  font-size: 15px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 15px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  list-style-type: none;
+}
+
+.Projects .title {
+  font-size: 20px;
+}
+
+.Projects .specific {
+  padding-top: 10px;
+  padding-bottom: 30px;
 }
