--- a/Resume.css
+++ b/Resume.css
@@ -105,9 +105,9 @@ img {
   padding-right: 15%;
 }
 
-.education .specific {
+.specific {
   font-size: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .professional {
@@ -116,7 +116,7 @@ img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-bottom: 12%;
+  padding-bottom: 2%;
 }
 
 .professional dt {
@@ -174,7 +174,7 @@ img {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-bottom: 21%;
+  padding-bottom: 17.5%;
 }
 
 .referees label {
@@ -192,8 +192,11 @@ img {
 .referees li {
   font-size: 15px;
   width: 300px;
-  padding-top: 10px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   padding-right: 15%;
   list-style-type: none;
+}
+
+.referees .specific {
+  padding-top: 10px;
 }
